// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityHistoryItem only renders the first line of multi-line notes 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F0F0F0",
      "borderRadius": 15,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": 15,
      "padding": 20,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      January 1, 2023 at 12:00:00 PM
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#666666",
          "fontSize": 14,
          "marginTop": 5,
        }
      }
    >
      Line 1
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginLeft": 20,
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#666666"
        name="pencil-outline"
        size={24}
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginLeft": 20,
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#666666"
        name="trash-can-outline"
        size={24}
      />
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly with notes preview 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F0F0F0",
      "borderRadius": 15,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": 15,
      "padding": 20,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      January 1, 2023 at 12:00:00 PM
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#666666",
          "fontSize": 14,
          "marginTop": 5,
        }
      }
    >
      Test Note
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginLeft": 20,
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#666666"
        name="pencil-outline"
        size={24}
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginLeft": 20,
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#666666"
        name="trash-can-outline"
        size={24}
      />
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly without notes 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F0F0F0",
      "borderRadius": 15,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": 15,
      "padding": 20,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      January 1, 2023 at 12:00:00 PM
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginLeft": 20,
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#666666"
        name="pencil-outline"
        size={24}
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "marginLeft": 20,
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#666666"
        name="trash-can-outline"
        size={24}
      />
    </View>
  </View>
</View>
`;
